# api.thesammy2010.com

./: .dockerignore  .env  .gitattributes  .gitignore  .golangci.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  buf.gen.yaml  buf.yaml  docker-compose.yaml  fly.toml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml  fly-deploy.yml  pre-commit.yml  tests.yml
cmd/migrate/: db.go
cmd/server/: main.go
internal/: config.go  handlers.go  marshallers.go
internal/auth/: auth.go
internal/cache/: cache.go
internal/config/: config.go
internal/handlers/: handlers.go
internal/logger/: logger.go
internal/marshallers/: marshallers.go
internal/rbac/: notes.txt  rbac.go  test.csv  test.old.csv
migrations/: env.py
migrations/versions/: 2025_08_15_1840-a6271a2fb269_init.py  2025_08_15_1841-fe7fff8220d2_user_add_date_columns.py  2025_08_15_2056-91bfced20867_go_heavier_add_location_table.py  2025_08_15_2131-37b2d51b368c_go_heavier_add_location_table.py  2025_10_07_1923-aa543e109b6f_go_heavier_locations_add_postcode_column.py  2025_10_07_1933-06b584012527_go_heavier_locations_backfill_data_from_.py  2025_10_07_2118-6f2dae00bb77_go_heavier_add_exercises_endpoint.py  2025_10_07_2157-d432440a31bf_go_heavier_exercises_backfill_data_from_.py  2025_12_12_2138-7a6ec72aacef_go_heavier_add_workout_table.py  2026_02_20_2323-2cfd9b746fcc_go_heavier_add_more_locations.py  (+6 more)
routes/: data.go  health.go  visits.go
server/: main.go
src/: common.py  config.py  db.py  main.py
tests/: test_workout_schema_validation.py
(+40 files in other folders)
